Fixed MultiField error handling. Reintroduced JavaScript code that was lost after the last commit. Small CSS fix, overflow:auto is not needed anymore.
git-svn-id: https://validformbuilder.googlecode.com/svn/trunk@590 926da7a8-d6ea-11dd-b97a-b9dcd130504c

--- a/css/validform.css
+++ b/css/validform.css
@@ -93,10 +93,6 @@ form.validform div.vf__hint textarea {
 	color: #999;
 }
 
-form.validform div.vf__multifield {
-	overflow: auto;
-}
-
 form.validform label {
 	display: block;
 	float: left;
